--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,21 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-image: url("./Shane_Front_Page.jpg");
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  top:0px;
+  left:0px;
+  width: 100%;
+  height: 100%;
 }
 
 .App-link {
