--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
   font-family: 'Nunito';
   src: local('Nunito'), url(./fonts/Nunito-Bold.ttf) format('truetype');
 }
+
+@font-face {
+  font-family: 'Nunito-Regular';
+  src: local('Nunito-Regular'), url(./fonts/Nunito-Regular.ttf) format('truetype');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Nunito';
