--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,23 @@
 .App{
-  background-image: url("./Shane_Front_Page.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  height:100vh;
-  width:100%;
-  object-fit: cover;
+ 
+  margin: 0 auto;
 }
+
+p, a{
+  margin:0;
+  color:#2b2d42
+}
+
+a:visited {
+   color: #2b2d42
+  } /* Visited link    */
+a:hover {
+   color: #2b2d42
+  } /* Mouse over link */
+a:active {
+   color: #2b2d42
+  }
+
 
 
 
