--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -36,7 +36,8 @@
   padding-right: 30px;
 }
 #about-img{
-    border-radius:2%
+    border-radius: 24%;
+    margin-top: 43px;
 }
 .about-table{
   grid-row:1;
@@ -58,3 +59,149 @@ td, th {
   text-align: left;
   padding: 8px;
 }
+
+.carousel .slide{ background: none !important; }
+
+.personal{
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  column-gap: 30px;
+  grid-template-rows: auto;
+  justify-content: center;
+  grid-auto-flow: column;
+  position: relative;
+  z-index: 1;
+  font-family:Nunito-Bold;
+  font-size:30px;
+}
+.name-placeholder{
+    grid-row-start: 1;
+    grid-column: 1/2;
+}
+
+.name{
+    grid-row-start: 1;
+    grid-column: 2/6;
+}
+.age-placeholder{
+    grid-row-start: 2;
+    grid-column: 1/2;
+
+}
+
+.age{
+    grid-row-start: 2;
+    grid-column: 2/6;
+}
+.location-placeholder{
+    grid-row-start: 3;
+    grid-column: 1/2;
+
+}
+
+.location{
+    grid-row-start: 3;
+    grid-column: 2/6;
+}
+
+
+.carousel .control-dots .dot {
+    background: black !important;
+}
+
+.shane_logo{
+    width: 72px;
+    margin-top: 11px;
+    margin-left: 9px;
+}
+
+.box {
+	 background-color: transparent;
+	 border-radius: 3px;
+	 color: #fff;
+	 position: relative;
+	 transform: translate(-50%, -50%);
+	 width: 400px;
+	 height: 300px;
+	 transform-style: preserve-3d;
+	 perspective: 2000px;
+	 transition: 0.4s;
+	 text-align: center;
+}
+ .box:before {
+	 content: '';
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+	 width: 100%;
+	 height: 100%;
+	 background: transparent;
+	 border-top: 20px solid #fff;
+	 border-left: 20px solid #fff;
+	 box-sizing: border-box;
+}
+ .box:after {
+	 content: '';
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+	 width: 100%;
+	 height: 100%;
+	 border-bottom: 20px solid #fff;
+	 border-right: 20px solid #fff;
+	 box-sizing: border-box;
+}
+ .box .fas {
+	 font-size: 25px;
+	 height: 50px;
+	 width: 50px;
+	 line-height: 50px !important;
+	 background-color: #fff;
+	 color: #2c3a47;
+}
+ .box .fa2 {
+	 position: absolute;
+	 bottom: 0;
+	 right: 0;
+	 z-index: 1;
+}
+ .box .text {
+	 position: absolute;
+	 top: 30px;
+	 left: -30px;
+	 width: calc(100% + 60px);
+	 height: calc(100% - 60px);
+	 background-color: #2c3a47;
+	 border-radius: 3px;
+	 transition: 0.4s;
+}
+ .box .text .fa1 {
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+}
+ .box .text div {
+	 position: absolute;
+	 top: 50%;
+	 left: 0;
+	 transform: translateY(-50%);
+	 text-align: center;
+	 width: 100%;
+	 padding: 30px 60px;
+	 line-height: 1.5;
+	 box-sizing: border-box;
+}
+ .box .text div h3 {
+	 font-size: 30px;
+	 margin-bottom: 5px;
+}
+ .box .text div p {
+	 font-size: 15px;
+}
+ .box:hover {
+	 transform: translate(-50%, -50%) rotateY(-20deg) skewY(3deg);
+}
+ .box:hover .text {
+	 transform: rotateY(20deg) skewY(-3deg);
+}
+ 
